Cleaned up options and compilation unit comparison.